# rotateobj

./: CMakeLists.txt  main.cpp
test/aaa2/: untitled.mtl
